# rag-ai-agent

./: .env  RAG_AI_Agent.ipynb  README.md  document_gen.ipynb  main.py  pyproject.toml  requirements.txt  test_output.txt  test_rag.py
chroma_db/c191a0d7-a500-434a-a202-17e9a77ea8f5/: index_metadata.pickle
